find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED COMPONENTS system)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(server server.cpp)
add_executable(boost_server boost_server.cpp N2MStandardPacket.cpp M2NStandardPacket.cpp)
target_link_libraries(boost_server ${Boost_LIBRARIES})
add_executable(networkserver_test networkserver_test.cpp NetworkServer.cpp N2MStandardPacket.cpp M2NStandardPacket.cpp)
target_link_libraries(networkserver_test ${Boost_LIBRARIES})
